--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+_website
 
 # PyBuilder
 .pybuilder/
@@ -129,6 +130,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.doctrees
 
 # Spyder project settings
 .spyderproject
