--- a/.github/workflows/blog.yaml
+++ b/.github/workflows/blog.yaml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.12.4'  # Replace '3.x' with your preferred version
+          python-version: '3.x'  # Replace '3.x' with your preferred version
       
       - name: Install Dependencies
         run: |
