--- a/.github/workflows/blog.yaml
+++ b/.github/workflows/blog.yaml
@@ -18,17 +18,9 @@ jobs:
         with:
           python-version: '3.x'  # Replace '3.x' with your preferred version
       
-      - name: Install Sphinx
+      - name: Install Dependencies
         run: |
-          pip install sphinx
-
-      - name: Install Ablog
-        run: |
-          pip install ablog
-
-      - name: Install Theme
-        run: |
-          pip install sphinx_pydata_theme
+          pip install -r requirements.txt
           
       - name: Build Blog
         run: ablog build
