--- a/.github/workflows/deploy-blog.yaml
+++ b/.github/workflows/deploy-blog.yaml
@@ -12,6 +12,10 @@ on:
 jobs:
   deploy-blog:
     runs-on: ubuntu-latest
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # added or changed files to the repository.
+      contents: write
     steps:
     - uses: actions/checkout@v2
 
@@ -38,3 +42,6 @@ jobs:
     - name: Add .nojekyll
       run: |
         cat > docs/.nojekyll
+
+    # Commit all changed files back to the repository
+    - uses: stefanzweifel/git-auto-commit-action@v5
