--- a/.github/workflows/deploy-blog.yaml
+++ b/.github/workflows/deploy-blog.yaml
@@ -10,7 +10,7 @@ on:
 
 # This job installs dependencies, build the blog, and pushes it to `gh-pages`
 jobs:
-  deploy-book:
+  deploy-blog:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -24,12 +24,12 @@ jobs:
       run: |
         pip install -r requirements.txt
 
-    # Build the book
+    # Build the blog
     - name: Build the site
       run: |
         ablog build
 
-    # If we've pushed to main, push the book's HTML to github-pages
+    # If we've pushed to main, push the blog's HTML to github-pages
     - if: ${{ github.ref == 'refs/heads/main' }}
       name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v4
