--- a/.github/workflows/deploy-blog.yaml
+++ b/.github/workflows/deploy-blog.yaml
@@ -12,6 +12,8 @@ on:
 jobs:
   deploy-blog:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v4
 
